[gd_scene load_steps=4 format=3 uid="uid://coejtwhxhful0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_x306x"]
[ext_resource type="PackedScene" uid="uid://bgjdlcqd4v1e1" path="res://scenes/chicken.tscn" id="2_pbttd"]
[ext_resource type="PackedScene" uid="uid://b6c05gwiy03eq" path="res://scenes/turtle.tscn" id="3_kf4kj"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_x306x")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 216.0
offset_top = 100.0
offset_right = 311.0
offset_bottom = 126.0
scale = Vector2(4, 4)
text = "FARM GAME"

[node name="MainPanel" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -15.5
offset_right = 28.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="Control/MainPanel"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="Control/MainPanel"]
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="Control/MainPanel"]
layout_mode = 2
text = "Settings
"

[node name="ExitButton" type="Button" parent="Control/MainPanel"]
layout_mode = 2
text = "Exit
"

[node name="SettingsPanel" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -20.0
offset_right = 22.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SFXLabel" type="Label" parent="Control/SettingsPanel"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control/SettingsPanel"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Control/SettingsPanel"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control/SettingsPanel"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Control/SettingsPanel"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="Control/SettingsPanel"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "800x600"
popup/item_0/id = 0
popup/item_1/text = "1024x768"
popup/item_1/id = 1
popup/item_2/text = "1280x1024"
popup/item_2/id = 2

[node name="SettingsBackButton" type="Button" parent="Control/SettingsPanel"]
layout_mode = 2
text = "Back"

[node name="Chicken" parent="." instance=ExtResource("2_pbttd")]
position = Vector2(568, 90)

[node name="Turtle" parent="." instance=ExtResource("3_kf4kj")]
position = Vector2(735, 572)

[connection signal="pressed" from="Control/MainPanel/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="Control/SettingsPanel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="Control/SettingsPanel/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="item_selected" from="Control/SettingsPanel/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="pressed" from="Control/SettingsPanel/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
